cmake_minimum_required(VERSION 3.5)
project(playground)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 17)


add_subdirectory(enum_class)
add_subdirectory(make_shared_and_get)
add_subdirectory(optional)
add_subdirectory(ref)
add_subdirectory(virtual_and_override)
add_subdirectory(virtual_and_pure_virtual)
add_subdirectory(dynamtic_cast)




